genx_platform/genx_components/microservices/metrics/monitoring/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 50050
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_metrics
                codec_type: AUTO
                internal_address_config:
                  cidr_ranges:
                    - address_prefix: "10.0.0.0"
                      prefix_len: 8
                    - address_prefix: "172.16.0.0"
                      prefix_len: 12
                    - address_prefix: "192.168.0.0"
                      prefix_len: 16
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: metrics_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/genx.metrics.v1.MetricsService"
                          route:
                            cluster: metrics_cluster
                            timeout: 60s
                            retry_policy:
                              retry_on: "5xx,reset,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 20s
                              host_selection_retry_max_attempts: 5
                http_filters:
                  - name: envoy.filters.http.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: false
                      headers:
                        - name: ":path"
                          exact_match: "/health"
                  - name: envoy.filters.http.decompressor
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.decompressor.v3.Decompressor
                      decompressor_library:
                        name: gzip
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.compression.gzip.decompressor.v3.Gzip
                  - name: envoy.filters.http.grpc_stats
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      stats_for_all_methods: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/certs/server.crt"
                    private_key:
                      filename: "/certs/server.key"
                validation_context:
                  trusted_ca:
                    filename: "/certs/ca.crt"

  clusters:
    - name: metrics_cluster
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
          - priority: HIGH
            max_connections: 200
            max_pending_requests: 200
            max_requests: 200
            max_retries: 5
      health_checks:
        - timeout: 5s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
          grpc_health_check: {}
      load_assignment:
        cluster_name: metrics_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: metrics-service
                      port_value: 50056
                  health_check_config:
                    port_value: 50056
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/certs/client.crt"
                private_key:
                  filename: "/certs/client.key"
            validation_context:
              trusted_ca:
                filename: "/certs/ca.crt"
